Bug 427288 - CMake is run frequently, but always switches to the Build tool view, hiding the Konsole.
Summary: CMake is run frequently, but always switches to the Build tool view, hiding t...
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.6.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-03 11:22 UTC by Laura David Hurka
Modified: 2025-02-10 19:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.250400
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Laura David Hurka 2020-10-03 11:22:56 UTC
SUMMARY
KDevelop used to run CMake to understand the project, which makes sense. But since the last update, this actively breaks my work-flow.

STEPS TO REPRODUCE
1. Do anything with the git repository, like a `git checkout ...`, using the Konsole tool view at the bottom dock area.

OBSERVED RESULT
KDevelop reruns CMake, and switches to the Build tool view, so the Konsole tool view can no longer be used.

EXPECTED RESULT
KDevelop may rerun CMake, but only in the background.

SOFTWARE/OS VERSIONS
KDE Neon 5.19 
KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.74.0
Qt Version: 5.15.0
Comment 1 Igor Kushnir 2020-10-03 13:32:57 UTC
Yes, this behavior annoys me too. Patches welcome!
Comment 2 Igor Kushnir 2023-07-08 13:47:50 UTC
How about this potential fix: when a tool view is automatically raised in a dock where at least one tool view is already visible, the raised tool view is added to the existing ones rather than replaces them (as it does now), and the the newly visible tool view does not steal focus. Note: the user can add a tool view to already visible ones manually in a given dock (e.g. Bottom) by clicking on it while holding Ctrl. The proposed fix would simulate such holding down of the Ctrl key, plus try to keep focus where it is.
Comment 3 Igor Kushnir 2023-07-25 17:15:43 UTC
(In reply to Igor Kushnir from comment #2)
> How about this potential fix: when a tool view is automatically raised in a
> dock where at least one tool view is already visible, the raised tool view
> is added to the existing ones rather than replaces them (as it does now),
> and the the newly visible tool view does not steal focus.
Actually this behavior is already possible on user demand. One could classify the following workaround as another bug, but it strikes me as more useful than harmful, especially in this case. When you enter a command in Terminal tool view that can modify a CMake file and trigger CMake-configure, press Ctrl+Enter instead of Enter. Build tool view will appear to the right of Terminal tool view, be much narrower and won't steal focus from Terminal. This works, because the only function that can show a tool view in a dock (both in response to explicit user action and programmatic raising) - IdealButtonBarWidget::showWidget() - tests the Control modifier. See https://invent.kde.org/kdevelop/kdevelop/-/blob/5a67488618b66ab3994e32e4aae32e9123a5447f/kdevplatform/sublime/idealbuttonbarwidget.cpp#L331
Another questionable side effect of this moot bug is that when a tool view shortcut contains the Control modifier, triggering the shortcut shows the tool view alongside already visible one(s) in its dock.

Furthermore, when both Terminal and Build tool views are visible in the same dock, there is no more need to hold the Control key, because an already visible tool view is not raised and does not hide other views. So even if the moot bug is fixed, the following workaround remains: open the Build tool view with Ctrl alongside the Terminal tool view beforehand. One can even change the widths of the two visible tool views by moving the splitter between them.
Comment 4 Bug Janitor Service 2025-01-24 19:59:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/kdevelop/kdevelop/-/merge_requests/715
Comment 5 Igor Kushnir 2025-02-10 16:24:08 UTC
Git commit ee4e13f448e2a0af69e99c4fca5983b446fb4f4f by Igor Kushnir.
Committed on 10/02/2025 at 14:30.
Pushed by igorkushnir into branch 'master'.

sublime: don't hide the active tool view when another one is raised

If another tool view is active when a tool view is raised, and the two
tool views are in the same dock widget area, the active tool view
becomes hidden, but then receives the focus from
IdealController::raiseView(). A focused hidden widget is problematic,
because key presses are delivered to it, but the user is unaware that
something changes.

Also, as the added comment explains, raising a tool view in the
background should not hide the active widget, which is likely being used
at the moment. Bug 427288 complains that modifying a CMake file of an
open project via the Terminal tool view automatically raises the Build
tool view and hides the Terminal tool view, which breaks the user's
workflow.

Find the active tool view in IdealController::raiseView() and store its
address in a new dedicated data member. Each IdealButtonBarWidget stores
a permanent reference to this data member and does not uncheck the
active tool view's action in IdealButtonBarWidget::showWidget(). This
implementation is simple enough and does not require raiseView() to find
the raised tool view's IdealButtonBarWidget. Storing a reference to the
IdealController's data member in each IdealButtonBarWidget is safe,
because all these objects share the same main window parent and are
never destroyed explicitly (but only in quick succession as the main
window's children when it is destroyed).
FIXED-IN: 6.2.250400

M  +5    -3    kdevplatform/sublime/idealbuttonbarwidget.cpp
M  +7    -1    kdevplatform/sublime/idealbuttonbarwidget.h
M  +16   -4    kdevplatform/sublime/idealcontroller.cpp
M  +6    -0    kdevplatform/sublime/idealcontroller.h

https://invent.kde.org/kdevelop/kdevelop/-/commit/ee4e13f448e2a0af69e99c4fca5983b446fb4f4f
Comment 6 Igor Kushnir 2025-02-10 19:23:59 UTC
Git commit 8eba5d57ae037ac2df96844731a1c3c3f93d7cde by Igor Kushnir.
Committed on 10/02/2025 at 14:30.
Pushed by igorkushnir into branch 'master'.

sublime: force tool view grouping only if the button is Ctrl-clicked

Before 38fa47e9860da2c3c3deb9f4312fa5a4bd343e56 and the commit(s) fixed
by it, only Ctrl-clicking a tool view button forced tool view grouping.
After that commit, the tool view grouping occurs whenever a Ctrl key is
held down while a tool view action becomes checked. This forced grouping
is wrong in the following scenarios:
1. If the user assigns a shortcut containing a Ctrl key to a tool view,
   triggering the shortcut while the tool view is hidden groups the tool
   view with other already shown tool views in its dock widget area.
2. The default shortcuts for the actions "Previous Tool View" and
   "Next Tool View" contain the Ctrl key. Therefore, triggering these
   shortcuts groups the previous/next tool view with already shown
   one(s) in the same dock widget area instead of replacing them.
3. Holding the Ctrl key when a tool view is raised programmatically
   prevents hiding already visible tool views in the same dock widget
   area.

The third scenario could be considered a well-hidden feature: when the
user expects a tool view to be raised, [s]he can hold the Ctrl key to
show it alongside already visible ones. This questionable feature could
be used as a crude workaround for Bug 427288. But fixing behavior in the
other two scenarios is more important than preserving the workaround.

Let IdealToolButton track its pressed-down state and force tool view
grouping only if checking the tool view action is triggered by
Ctrl-clicking the associated tool view button.

M  +8    -2    kdevplatform/sublime/idealbuttonbarwidget.cpp
M  +12   -0    kdevplatform/sublime/idealtoolbutton.cpp
M  +9    -0    kdevplatform/sublime/idealtoolbutton.h

https://invent.kde.org/kdevelop/kdevelop/-/commit/8eba5d57ae037ac2df96844731a1c3c3f93d7cde