sublime: don't hide the active tool view when another one is raised

If another tool view is active when a tool view is raised, and the two
tool views are in the same dock widget area, the active tool view
becomes hidden, but then receives the focus from
IdealController::raiseView(). A focused hidden widget is problematic,
because key presses are delivered to it, but the user is unaware that
something changes.

Also, as the added comment explains, raising a tool view in the
background should not hide the active widget, which is likely being used
at the moment. Bug 427288 complains that modifying a CMake file of an
open project via the Terminal tool view automatically raises the Build
tool view and hides the Terminal tool view, which breaks the user's
workflow.

Find the active tool view in IdealController::raiseView() and store its
address in a new dedicated data member. Each IdealButtonBarWidget stores
a permanent reference to this data member and does not uncheck the
active tool view's action in IdealButtonBarWidget::showWidget(). This
implementation is simple enough and does not require raiseView() to find
the raised tool view's IdealButtonBarWidget. Storing a reference to the
IdealController's data member in each IdealButtonBarWidget is safe,
because all these objects share the same main window parent and are
never destroyed explicitly (but only in quick succession as the main
window's children when it is destroyed).

BUG: 427288
FIXED-IN: 6.2.250400